--- a/.gitignore
+++ b/.gitignore
@@ -35,7 +35,7 @@
 *.i*86
 *.x86_64
 *.hex
-./corewar
+corewar
 tests/test
 
 # Debug files
@@ -52,3 +52,7 @@ modules.order
 Module.symvers
 Mkfile.old
 dkms.conf
+
+# Resources
+vm-champ-linux
+
