--- a/tests/Makefile
+++ b/tests/Makefile
@@ -6,12 +6,16 @@
 #    By: mmarcell <mmarcell@student.codam.nl>         +#+                      #
 #                                                    +#+                       #
 #    Created: 2020/01/08 13:03:52 by mmarcell      #+#    #+#                  #
-#    Updated: 2020/05/11 19:30:00 by zitzak        ########   odam.nl          #
+#    Updated: 2020/05/12 18:08:58 by zitzak        ########   odam.nl          #
 #                                                                              #
 # **************************************************************************** #
 
 include ../srcs/_files.mk
 include ./srcs/_test_files.mk
+
+TEST_MAIN = test_main
+
+TEST_MAIN_OBJ = ./srcs/test_main.c
 
 OBJS := $(ASM_FILES:%.c=../objs/%.o) $(VM_FILES:%.c=../objs/%.o)
 
@@ -32,15 +36,18 @@ MINUS := $$(tput setaf 1)-$$(tput sgr0)
 all: test
 
 test: $(OBJS) $(TESTS_OBJS)
-	@$(CC) -o $@ $^ -lcriterion $(LIBFT)
-	@echo " ${PLUS} $@"
+	$(CC) -o $@ $^ -lcriterion $(LIBFT)
+	@echo "1 ${PLUS} $@"
 
 objs/%.o: srcs/%.c $(HDRS) | objs
-	@$(CC) -c $(CFLAGS) -o $@ $(INCLUDES) $<
-	@echo " ${PLUS} $@"
+	$(CC) -c $(CFLAGS) -o $@ $(INCLUDES) $<
+	@echo "2 ${PLUS} $@"
 
 objs:
 	@mkdir -p $@
+
+test_main: $(TEST_MAIN_OBJ) $(OBJS)
+	$(CC) -o $(TEST_MAIN) $^ $(INCLUDES) $(LIBFT) $(CFLAGS)
 
 clean:
 	@rm -fv $(TESTS_OBJS) | sed "s/^/ $(MINUS) /"
