--- a/tests/Makefile
+++ b/tests/Makefile
@@ -6,7 +6,7 @@
 #    By: mmarcell <mmarcell@student.codam.nl>         +#+                      #
 #                                                    +#+                       #
 #    Created: 2020/01/08 13:03:52 by mmarcell      #+#    #+#                  #
-#    Updated: 2020/05/12 18:08:58 by zitzak        ########   odam.nl          #
+#    Updated: 2020/05/12 18:21:53 by zitzak        ########   odam.nl          #
 #                                                                              #
 # **************************************************************************** #
 
@@ -15,11 +15,13 @@ include ./srcs/_test_files.mk
 
 TEST_MAIN = test_main
 
-TEST_MAIN_OBJ = ./srcs/test_main.c
+TEST_MAIN_FILE = test_main.c
 
 OBJS := $(ASM_FILES:%.c=../objs/%.o) $(VM_FILES:%.c=../objs/%.o)
 
 TESTS_OBJS := $(TEST_FILES:%.c=objs/%.o)
+
+TEST_MAIN_OBJ := $(TEST_MAIN_FILE:%.c=objs/%.o)
 
 CFLAGS := -Wall -Wextra -Werror
 
@@ -36,24 +38,25 @@ MINUS := $$(tput setaf 1)-$$(tput sgr0)
 all: test
 
 test: $(OBJS) $(TESTS_OBJS)
-	$(CC) -o $@ $^ -lcriterion $(LIBFT)
-	@echo "1 ${PLUS} $@"
+	@$(CC) -o $@ $^ -lcriterion $(LIBFT)
+	@echo " ${PLUS} $@"
 
 objs/%.o: srcs/%.c $(HDRS) | objs
-	$(CC) -c $(CFLAGS) -o $@ $(INCLUDES) $<
-	@echo "2 ${PLUS} $@"
+	@$(CC) -c $(CFLAGS) -o $@ $(INCLUDES) $<
+	@echo " ${PLUS} $@"
 
 objs:
 	@mkdir -p $@
 
 test_main: $(TEST_MAIN_OBJ) $(OBJS)
-	$(CC) -o $(TEST_MAIN) $^ $(INCLUDES) $(LIBFT) $(CFLAGS)
+	@$(CC) -o $(TEST_MAIN) $^ $(INCLUDES) $(LIBFT) $(CFLAGS)
+	@./test_main
 
 clean:
-	@rm -fv $(TESTS_OBJS) | sed "s/^/ $(MINUS) /"
+	@rm -fv $(TESTS_OBJS) $(TEST_MAIN_OBJ) | sed "s/^/ $(MINUS) /"
 
 fclean: clean
-	@rm -fv test | sed "s/^/ $(MINUS) /"
+	@rm -fv test test_main | sed "s/^/ $(MINUS) /"
 
 re: fclean all
 
