update name of test executables and add .vscode repo

--- a/.gitignore
+++ b/.gitignore
@@ -37,13 +37,15 @@
 *.hex
 corewar
 asm
-tests/test
+tests/cor_test
+tests/asm_test
 
 # Debug files
 *.dSYM/
 *.su
 *.idb
 *.pdb
+.vscode/*
 
 # Kernel Module Compile Results
 *.mod*
