adjusted functions appropriately

--- a/graphics/Makefile
+++ b/graphics/Makefile
@@ -1,22 +1,20 @@
 # Makefile
 LDFLAGS=-lncurses
-SRC = vis_arena.c vis_attr_players.c vis_cursor.c corewargraphicdemo.c
-OBJ = vis_arena.o vis_attr_players.o vis_cursor.o corewargraphicdemo.o
+SRC = vis.c vis_arena.c vis_attr_players.c vis_cursor.c vis_data.c
+OBJ = vis.o vis_arena.o vis_attr_players.o vis_cursor.o vis_data.o
 LIBFT = ../libft/libft.a
 HEADERS = vis.h
 all: graphic
 graphic: $(LIBFT) $(OBJ)
-	gcc -Wall -Werror -Wextra $(LDFLAGS) -o $@ $^ $(LIBFT)
+	@gcc -Wall -Werror -Wextra $(LDFLAGS) -o $@ $^ $(LIBFT)
 %.o: %.c $(HEADERS)
-	gcc -Wall -Werror -Wextra -c -o $@ $<
+	@gcc -Wall -Werror -Wextra -c -o $@ $<
 
-fclean:
-	rm -rf $(OBJ)
-	rm -rf corewargraphicdemo.o
-	rm -rf vis_attr_players.o
-	rm -rf vis_arena.o
-	rm -rf graphic
+clean:
+	@rm -rf $(OBJ)
 
-re:
-	make fclean
-	make all
+fclean: clean	
+	@rm -rf graphic
+
+re: 
+	fclean
