--- a/test_folder/criterion/Makefile
+++ b/test_folder/criterion/Makefile
@@ -6,7 +6,7 @@
 #    By: mmarcell <mmarcell@student.codam.nl>         +#+                      #
 #                                                    +#+                       #
 #    Created: 2020/01/08 13:03:52 by mmarcell      #+#    #+#                  #
-#    Updated: 2020/07/12 14:34:39 by lhageman      ########   odam.nl          #
+#    Updated: 2020/08/08 08:51:03 by mgross        ########   odam.nl          #
 #                                                                              #
 # **************************************************************************** #
 
@@ -22,8 +22,11 @@ COR_TEST_OBJS := $(COR_TEST_FILES:%.c=objs/%.o)
 ASM_TEST_OBJS := $(ASM_TEST_FILES:%.c=objs/%.o)
 TEST_OBJS := COR_TEST_OBJS ASM_TEST_OBJS
 
-CFLAGS := -Wall -Wextra -Werror -lncurses
+CFLAGS := -Wall -Wextra
+
 TEST_MAIN = test_main
+
+LIBCURS := -lncurses
 
 TEST_MAIN_FILE = test_main.c
 
@@ -44,11 +47,11 @@ MINUS := $$(tput setaf 1)-$$(tput sgr0)
 all: cor_test asm_test
 
 cor_test: $(COR_OBJS) $(COR_TEST_OBJS)
-	@$(CC) -o $@ $^ $(CFLAGS) -lcriterion $(LIBFT)
+	@$(CC) -o $@ $^ $(CFLAGS) $(LIBCURS) -lcriterion $(LIBFT)
 	@echo " ${PLUS} $@"
 
 asm_test: $(ASM_OBJS) $(ASM_TEST_OBJS)
-	@$(CC) -o $@ $^ $(CFLAGS) -lcriterion $(LIBFT)
+	@$(CC) -o $@ $^ $(CFLAGS) $(LIBCURS) -lcriterion $(LIBFT)
 	@echo " ${PLUS} $@"
 
 objs/%.o: srcs/%.c $(HDRS) | objs
